--- a/style.css
+++ b/style.css
@@ -34,8 +34,16 @@ li{
     padding: 1em;
     border: 1px solid #eee;
     width: fit-content;
+    margin:none;
+    
 }
 .more-articles>p{
 display: inline-block;
 width: fit-content;
+}
+
+nav{
+    position:sticky;
+    top 0;
+    background-color: white;
 }
